# kid-videos-app

./: .gitignore  CLAUDE.md  FINAL_VALIDATION.md  README.md  build-all.sh  clear_db.sh  package-lock.json  package.json
docs/: BUILD.md  BUILD_QUICK_REFERENCE.md  DEVELOPMENT_COMPLETE.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: Layout.tsx  SearchForm.tsx  VideoCard.tsx  YouTubePlayer.tsx
frontend/src/hooks/: useI18n.ts  useTheme.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/pages/: Favorites.tsx  Help.tsx  Home.tsx  Player.tsx  Settings.tsx  Test.tsx
frontend/src/services/: api.ts  interfaces.ts  mock.ts  tauri.ts
frontend/src/stores/: appStore.ts
frontend/src/styles/: index.css  variables.less
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
