[package]
name = "kid-videos-app"
version = "1.0.0"
description = "儿童视频智能筛选器 - 跨平台应用"
authors = ["Kid Videos Team"]
license = "MIT"
repository = ""
default-run = "kid-videos-app"
edition = "2021"
rust-version = "1.70"


[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-store = { version = "2.0.0" }
tauri-plugin-shell = { version = "2.0.0" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.4"
urlencoding = "2.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
